<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.sun.doitpat.ui.detail.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutToDo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/fragment_background"
            android:gravity="center"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/color_accent"
            app:cardCornerRadius="@dimen/dp_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(1)}"
                app:cardBackgroundColor="@color/color_red"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(2)}"
                app:cardBackgroundColor="@color/color_orange"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(3)}"
                app:cardBackgroundColor="@color/color_yellow"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(4)}"
                app:cardBackgroundColor="@color/color_green"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(5)}"
                app:cardBackgroundColor="@color/color_blue"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(6)}"
                app:cardBackgroundColor="@color/color_accent"
                app:cardCornerRadius="@dimen/dp_24" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_margin="@dimen/dp_8"
                android:onClick="@{() -> item.addColor(7)}"
                app:cardBackgroundColor="@color/color_gray"
                app:cardCornerRadius="@dimen/dp_24" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:background="@drawable/fragment_background"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutToDo">

            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_32"
                android:autofillHints="@string/title_title"
                android:ems="10"
                android:hint="@string/title_title"
                android:inputType="textPersonName"
                android:text="@={item.title}"
                android:textSize="@dimen/sp_16"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_32"
                android:autofillHints="@string/title_description"
                android:ems="10"
                android:hint="@string/title_description"
                android:inputType="textPersonName"
                android:text="@={item.description}"
                android:textColor="@color/color_sub_text"
                android:textSize="@dimen/sp_16"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_64"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layoutButton"
                    android:layout_width="@dimen/dp_120"
                    android:layout_height="@dimen/dp_48"
                    android:layout_margin="@dimen/dp_32"
                    android:background="@drawable/fragment_background_purple"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textClearTime"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:foreground="@drawable/ic_alarm_off_white_24dp"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/textSetTime"
                        android:layout_width="@dimen/dp_24"
                        android:layout_height="@dimen/dp_24"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_24"
                        android:foreground="@drawable/ic_add_alarm_white_24dp"
                        android:gravity="center" />
                </LinearLayout>

                <EditText
                    android:id="@+id/editPlace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_32"
                    android:autofillHints="@string/title_place"
                    android:hint="@string/title_place"
                    android:inputType="text"
                    android:text="@={item.place}"
                    android:textSize="@dimen/sp_16"
                    tools:targetApi="o" />
            </LinearLayout>

            <TextView
                android:id="@+id/textTime"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="@dimen/dp_32"
                android:gravity="center"
                android:text="@={item.time}"
                android:textSize="@dimen/sp_14" />

            <Switch
                android:id="@+id/switchReminder"
                android:layout_width="@dimen/dp_120"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_32"
                android:layout_marginBottom="@dimen/dp_32"
                android:gravity="center"
                android:text="@string/title_alert_option"
                android:textColor="@color/color_sub_text"
                android:textSize="@dimen/sp_16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutOption"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_64"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/fragment_background_purple"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:background="@drawable/ic_close_black_24dp"
                android:gravity="center" />

            <Button
                android:id="@+id/buttonCancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:text="@string/title_cancel"
                android:textColor="@color/color_white" />

            <TextView
                android:layout_width="@dimen/dp_32"
                android:layout_height="@dimen/dp_32"
                android:layout_marginStart="@dimen/dp_84"
                android:background="@drawable/ic_check_black_24dp"
                android:gravity="center" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_48"
                android:text="@string/title_save"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
